fixed overlap categories drawer when cart is open and vise versa added functionality for thank you modal to show more order items.

--- a/components/Modals/ThankYouModal/ThankYouModal.scss
+++ b/components/Modals/ThankYouModal/ThankYouModal.scss
@@ -17,6 +17,9 @@
       line-height: 1.67;
     }
   }
+  &__showmore {
+    margin-top: auto;
+  }
 
   &__cart {
     margin-top: 1.5rem;
@@ -28,6 +31,8 @@
       height: 100%;
       padding: 1.5rem 1.5rem 1rem;
       max-height: 140px;
+      display: flex;
+      flex-direction: column;
 
       hr {
         opacity: 0.2;
@@ -50,6 +55,56 @@
           }
         }
       }
+    }
+  }
+
+  @include media('>=lg') {
+    width: 540px;
+    min-height: 713px;
+    padding: 3rem;
+    display: flex;
+    flex-direction: column;
+    &__header {
+      svg {
+        margin-bottom: 32px;
+      }
+      &--title {
+        margin: 0;
+        h2 {
+          font-size: 32px;
+
+          &:nth-child(2) {
+            margin-bottom: 1.5rem;
+          }
+        }
+      }
+    }
+    &__cart {
+      display: flex;
+      max-height: 280px;
+      border-radius: 8px;
+
+      &--fhalf {
+        width: 60%;
+        padding-right: 2.4rem;
+        height: 100%;
+        max-height: 100%;
+        min-height: 100%;
+      }
+
+      &--total {
+        display: flex;
+        flex-direction: column;
+        border-radius: 0px 8px 8px 0;
+        width: 40%;
+
+        &--text {
+          margin-top: auto;
+        }
+      }
+    }
+    .v-btn {
+      margin-top: auto !important;
     }
   }
 }
